@@ -3,14 +3,14 @@ use Test;
 use P5built-ins;
 
 my @supported = <
-  caller chdir chomp chop chr closedir each endgrent endnetent endprotoent
+  caller chdir chomp chop chr closedir defined each endgrent endnetent endprotoent
   endpwent endservent fc fileno getgrent getgrgid getgrnam getlogin getnetbyaddr
   getnetbyname getnetent getpgrp getppid getpriority getprotobyname getprotobynumber
   getprotoent getpwent getpwnam getpwuid getservbyname getservbyport getservent
   gmtime hex index lc lcfirst length localtime oct opendir ord pack pop print printf
   push quotemeta rand readdir readlink ref reset reverse rewinddir rindex say seek
   seekdir setgrent setnetent setpriority setprotoent setpwent setservent shift sleep 
-  srand study substr telldir tie tied times uc ucfirst unpack unshift untie
+  srand study substr telldir tie tied times uc ucfirst undef unpack unshift untie
 
   prefix:<-r> prefix:<-w> prefix:<-x> prefix:<-e> prefix:<-d> prefix:<-f>
   prefix:<-s> prefix:<-z> prefix:<-l>
