@@ -1,6 +1,7 @@
 Revision history for P5built-ins
 
 {{$NEXT}}
+    - add support for defined, undef
 
 0.0.19  2018-05-07T13:05:44+02:00
     - add support for getpriority, setpriority, getppid, getpgrp
